fixed overflow on header

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -32,3 +32,10 @@
     /* font-weight: normal;
     font-style: normal; */
 }
+
+@font-face {
+    font-family: 'CaeciliaLTStd-Bold';
+    src: url(../Fonts/Caecilia/CaeciliaLTStd-Bold.otf);
+    /* font-weight: normal;
+    font-style: normal; */
+}
